# basalt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cliff.toml  commitlint.config.js  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml
.husky/: pre-commit
crates/basalt-api/: Cargo.toml  README.md
crates/basalt-api/src/: broadcast.rs  context.rs  events.rs  lib.rs  logger.rs  plugin.rs  recipes.rs  system.rs  testing.rs
crates/basalt-api/src/command/: args.rs  dispatch.rs  mod.rs  registry.rs
crates/basalt-api/src/components/: container.rs  crafting.rs  identity.rs  inventory.rs  item.rs  mod.rs  recipe_book.rs  spatial.rs
crates/basalt-api/src/container/: mod.rs
crates/basalt-api/src/context/: chat.rs  container.rs  entity.rs  mod.rs  player.rs  recipe.rs  response.rs  tests.rs  world.rs
crates/basalt-api/src/events/: block.rs  bus.rs  chat.rs  container.rs  crafting.rs  mod.rs  packet.rs  player.rs  traits.rs
crates/basalt-api/src/recipes/: handle.rs  id.rs  mod.rs  types.rs
crates/basalt-api/src/testing/: harness.rs  mock_recipes.rs  mock_world.rs  mod.rs  noop.rs
crates/basalt-api/src/world/: block_entity.rs  collision.rs  handle.rs  mod.rs
crates/basalt-command/: Cargo.toml
crates/basalt-command/src/: args.rs  command.rs  lib.rs  registry.rs
crates/basalt-core/: Cargo.toml
crates/basalt-core/src/: budget.rs  container.rs  context.rs  gamemode.rs  lib.rs  logger.rs  player.rs  system.rs  testing.rs
crates/basalt-core/src/components/: identity.rs  inventory.rs  item.rs  mod.rs  recipe_book.rs  spatial.rs
crates/basalt-derive/: Cargo.toml  README.md
crates/basalt-derive/src/: attrs.rs  codegen.rs  decode.rs  encode.rs  lib.rs  packet.rs  size.rs
crates/basalt-ecs/: Cargo.toml
crates/basalt-ecs/benches/: ecs.rs
crates/basalt-ecs/src/: components.rs  ecs.rs  lib.rs  parallel.rs  schedule.rs  system.rs
crates/basalt-events/: Cargo.toml
crates/basalt-events/src/: bus.rs  event.rs  lib.rs
crates/basalt-mc-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/basalt-mc-protocol/src/: derive_tests.rs  error.rs  state.rs
crates/basalt-mc-protocol/tests/: recipe_display_codegen.rs
crates/basalt-net/: Cargo.toml
crates/basalt-net/benches/: write_packet.rs
crates/basalt-net/examples/: server.rs
crates/basalt-net/src/: compression.rs  connection.rs  crypto.rs  error.rs  framing.rs  lib.rs  pipeline.rs  stream.rs  writer.rs
crates/basalt-net/tests/: e2e.rs
crates/basalt-protocol/: Cargo.toml  README.md
crates/basalt-protocol/src/: chunk.rs  derive_tests.rs  lib.rs  registry.rs  registry_data.rs  state.rs  version.rs
crates/basalt-protocol/src/packets/: configuration.rs  handshake.rs  login.rs  mod.rs  status.rs
crates/basalt-protocol/src/packets/play/: chat.rs  entity.rs  inventory.rs  misc.rs  mod.rs  player.rs  types.rs  world.rs
crates/basalt-protocol/src/types/: mod.rs  recipe_display.rs
crates/basalt-protocol/tests/: recipe_display_codegen.rs
crates/basalt-recipes/: Cargo.toml
crates/basalt-server/: Cargo.toml
crates/basalt-server/examples/: server.rs
crates/basalt-server/src/: channels.rs  chat.rs  chunk.rs  config.rs  connection.rs  context.rs  error.rs  events.rs  game_loop.rs  handler.rs  helpers.rs  io_thread.rs  lib.rs  messages.rs  net_task.rs  network_loop.rs  play.rs  player.rs  skin.rs  state.rs
crates/basalt-server/src/context/: chat.rs  container.rs  entity.rs  mod.rs  player.rs  recipe.rs  tests.rs  world.rs
crates/basalt-server/src/game/: blocks.rs  chunk_stream.rs  click.rs  click_handler.rs  container.rs  crafting.rs  dispatch.rs  helpers.rs  inventory.rs  items.rs  lifecycle.rs  mod.rs  movement.rs  recipe_book.rs  responses.rs  tick.rs
crates/basalt-server/src/game/inventory/: mod.rs  slots.rs
crates/basalt-server/src/game/inventory/clicks/: double_click.rs  drag.rs  drop.rs  hotbar.rs  left_right.rs  mod.rs  shift.rs
crates/basalt-server/src/handlers/: block.rs  chat.rs  lifecycle.rs  mod.rs  movement.rs  storage.rs  world.rs
crates/basalt-server/src/net/: channels.rs  chunk_cache.rs  connection.rs  mod.rs  play_handler.rs  play_sender.rs  skin.rs  task.rs
crates/basalt-server/src/runtime/: io_thread.rs  mod.rs  tick.rs
crates/basalt-server/tests/: e2e.rs
crates/basalt-server/tests/e2e/: blocks.rs  chat.rs  chunks.rs  login.rs  main.rs  multiplayer.rs  status.rs
crates/basalt-storage/: Cargo.toml
crates/basalt-test-utils/: Cargo.toml
crates/basalt-test-utils/src/: lib.rs
crates/basalt-testkit/: Cargo.toml
crates/basalt-testkit/src/: lib.rs
crates/basalt-types/: Cargo.toml  README.md
crates/basalt-types/benches/: nbt.rs  varint.rs
crates/basalt-types/src/: angle.rs  bit_set.rs  byte_array.rs  error.rs  identifier.rs  lib.rs  opaque.rs  position.rs  primitives.rs  slot.rs  string.rs  text.rs  traits.rs  uuid.rs  varint.rs  vectors.rs
crates/basalt-types/src/nbt/: decode.rs  encode.rs  mod.rs  tag.rs
crates/basalt-world/: Cargo.toml
crates/basalt-world/benches/: chunk.rs
crates/basalt-world/src/: block.rs  chunk.rs  collision.rs  format.rs  generator.rs  handle.rs  lib.rs  noise_gen.rs  palette.rs  world.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chunk_deserialize.rs  decompress.rs  nbt.rs  opaque.rs  packet_play.rs  position.rs  slot.rs  string.rs  text_component.rs  varint.rs
plugins/block/: Cargo.toml
plugins/block/src/: lib.rs
plugins/chat/: Cargo.toml
plugins/command/: Cargo.toml
plugins/container/: Cargo.toml
plugins/drops/: Cargo.toml
plugins/item/: Cargo.toml
plugins/lifecycle/: Cargo.toml
plugins/movement/: Cargo.toml
plugins/physics/: Cargo.toml
plugins/recipe/: Cargo.toml
plugins/storage/: Cargo.toml
plugins/storage/src/: lib.rs
plugins/world/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: codegen.rs  helpers.rs  main.rs  parser.rs  play.rs  recipes.rs  registry.rs  types.rs
(+34 files in other folders)
