[workspace]
resolver = "2"
members = ["crates/*", "plugins/*", "xtask"]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/basalt-mc/basalt"

[workspace.dependencies]
# Internal crates
basalt-types = { path = "crates/basalt-types" }
basalt-derive = { path = "crates/basalt-derive" }
basalt-protocol = { path = "crates/basalt-protocol" }
basalt-net = { path = "crates/basalt-net" }
basalt-server = { path = "crates/basalt-server" }
basalt-world = { path = "crates/basalt-world" }
basalt-core = { path = "crates/basalt-core" }
basalt-api = { path = "crates/basalt-api" }
basalt-command = { path = "crates/basalt-command" }
basalt-events = { path = "crates/basalt-events" }
basalt-storage = { path = "crates/basalt-storage" }
basalt-test-utils = { path = "crates/basalt-test-utils" }

# Error handling
thiserror = "2"

# Proc-macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Encryption
aes = "0.8"
cfb8 = "0.8"

# Compression
flate2 = "1"

# Compression (storage)
lz4_flex = "0.11"

# Noise generation
noise = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
toml = "0.8"

# Concurrent data structures
dashmap = "6"

# Ordered maps
indexmap = "2"

# HTTP / serialization
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dev / testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
