[package]
name = "basalt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
basalt-types = { path = "../crates/basalt-types" }
basalt-protocol = { path = "../crates/basalt-protocol" }
basalt-net = { path = "../crates/basalt-net" }
basalt-world = { path = "../crates/basalt-world" }

# Prevent this from interfering with workspaces
[workspace]

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/varint.rs"
doc = false

[[bin]]
name = "fuzz_string"
path = "fuzz_targets/string.rs"
doc = false

[[bin]]
name = "fuzz_nbt"
path = "fuzz_targets/nbt.rs"
doc = false

[[bin]]
name = "fuzz_slot"
path = "fuzz_targets/slot.rs"
doc = false

[[bin]]
name = "fuzz_opaque"
path = "fuzz_targets/opaque.rs"
doc = false

[[bin]]
name = "fuzz_packet_play"
path = "fuzz_targets/packet_play.rs"
doc = false

[[bin]]
name = "fuzz_text_component"
path = "fuzz_targets/text_component.rs"
doc = false

[[bin]]
name = "fuzz_position"
path = "fuzz_targets/position.rs"
doc = false

[[bin]]
name = "fuzz_decompress"
path = "fuzz_targets/decompress.rs"
doc = false
