[package]
name = "basalt-api"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
raw-packets = ["dep:basalt-protocol"]

[dependencies]
basalt-protocol = { workspace = true, optional = true }
basalt-types = { workspace = true }
basalt-world = { workspace = true }
basalt-recipes = { workspace = true }
log = { workspace = true }
