[package]
name = "basalt-core"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-recipes = { workspace = true }
basalt-types = { workspace = true }
basalt-world = { workspace = true }
log = { workspace = true }
