[package]
name = "basalt-derive"
version.workspace = true
publish = false
description = "Derive macros for Encode/Decode/EncodedSize traits"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
