[package]
name = "basalt-net"
version = "0.1.0"
description = "Async networking layer with encryption, compression, and middleware pipeline"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-types = { workspace = true }
basalt-protocol = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
aes = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
