[package]
name = "basalt-net"
version.workspace = true
publish = false
description = "Async networking layer with encryption, compression, and middleware pipeline"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-types = { workspace = true }
basalt-protocol = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
aes = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "write_packet"
