[package]
name = "basalt-protocol"
version.workspace = true
publish = false
description = "Minecraft packet definitions and version-aware packet registry"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-types = { workspace = true }
basalt-derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
