[package]
name = "basalt-protocol"
version.workspace = true
publish = true
description = "Minecraft packet definitions and version-aware packet registry"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/basalt-protocol"
readme = "README.md"
rust-version = "1.85"
keywords = ["minecraft", "protocol", "packets", "network", "wire"]
categories = ["network-programming", "encoding", "game-development"]

[dependencies]
basalt-types = { workspace = true }
basalt-derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
