[package]
name = "basalt-server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-types = { workspace = true }
basalt-protocol = { workspace = true }
basalt-api = { workspace = true, features = ["raw-packets"] }
basalt-ecs = { workspace = true }
basalt-net = { workspace = true }
basalt-world = { workspace = true }
basalt-recipes = { workspace = true }

# Built-in plugins
basalt-plugin-chat = { path = "../../plugins/chat" }
basalt-plugin-command = { path = "../../plugins/command" }
basalt-plugin-block = { path = "../../plugins/block" }
basalt-plugin-world = { path = "../../plugins/world" }
basalt-plugin-storage = { path = "../../plugins/storage" }
basalt-plugin-item = { path = "../../plugins/item" }
basalt-plugin-container = { path = "../../plugins/container" }
basalt-plugin-recipe = { path = "../../plugins/recipe" }
basalt-plugin-physics = { path = "../../plugins/physics" }
basalt-plugin-lifecycle = { path = "../../plugins/lifecycle" }
basalt-plugin-movement = { path = "../../plugins/movement" }

tokio = { workspace = true }
rayon = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
