[package]
name = "basalt-testkit"
version = "0.1.0"
description = "Testing framework for Basalt plugins"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-api = { workspace = true }
basalt-command = { workspace = true }
basalt-world = { workspace = true }
basalt-types = { workspace = true }
basalt-events = { workspace = true }
