[package]
name = "basalt-testkit"
version.workspace = true
publish = false
description = "Testing framework for Basalt plugins"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-api = { workspace = true }
basalt-core = { workspace = true }
basalt-ecs = { workspace = true }
basalt-world = { workspace = true }
basalt-types = { workspace = true }
basalt-recipes = { workspace = true }
