[package]
name = "basalt-types"
version = "0.1.0"
description = "Primitive Minecraft protocol types with zero-copy serialization"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
