[package]
name = "basalt-types"
version.workspace = true
publish = false
description = "Primitive Minecraft protocol types with zero-copy serialization"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[[bench]]
name = "varint"

[[bench]]
name = "nbt"
