[package]
name = "basalt-types"
version.workspace = true
publish = true
description = "Primitive Minecraft protocol types with zero-copy serialization"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/basalt-types"
readme = "README.md"
rust-version = "1.85"
keywords = ["minecraft", "protocol", "encoding", "nbt", "serialization"]
categories = ["encoding", "parser-implementations", "game-development"]

[dependencies]
thiserror = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[[bench]]
name = "varint"

[[bench]]
name = "nbt"
