[package]
name = "basalt-world"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-types = { workspace = true }
basalt-storage = { workspace = true }
dashmap = { workspace = true }
noise = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "chunk"
