[package]
name = "basalt-plugin-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-api = { workspace = true }
basalt-world = { workspace = true }

[dev-dependencies]
basalt-plugin-block = { path = "../block" }
basalt-types = { workspace = true }
tempfile = "3"
