[package]
name = "basalt-plugin-storage"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
basalt-api = { workspace = true }

[dev-dependencies]
basalt-plugin-block = { path = "../block" }
basalt-testkit = { workspace = true }
tempfile = "3"
